# PrEditor

./: setup.cfg
preditor/: debug.py  excepthooks.py  prefs.py
preditor/gui/: codehighlighter.py  console.py  drag_tab_bar.py  loggerwindow.py  workbox_mixin.py  workbox_text_edit.py  workboxwidget.py
preditor/gui/group_tab_widget/: __init__.py  grouped_tab_models.py  grouped_tab_widget.py  one_tab_widget.py
preditor/gui/ui/: loggerwindow.ui
preditor/resource/pref_updates/: pref_updates.json
preditor/resource/stylesheet/: Bright.css  Dark.css
preditor/scintilla/: documenteditor.py
