[metadata]

[options]

[options.packages.find]

[options.entry_points]

[options.package_data]

[bdist_wheel]

[flake8]
select = B, C, E, F, N, W, B9
extend-ignore =
    B905,
    E203,
    E501,
    E722,
    N802,
    N803,
    N804,
    N806,
    N815,
    W503,
max-line-length = 80
exclude =
    *.egg-info
    *.pyc
    .cache
    .eggs
    .git
    .tox
    __pycache__
    build
    dist
    docs
    shared-venv
